add links and animations

--- a/index.html
+++ b/index.html
@@ -23,13 +23,17 @@
       <div class="right">
         <h1>ota</h1>
         <div class="social">
-          <a href="http://" target="_blank" rel="noopener noreferrer">
+          <a
+            href="https://www.linkedin.com/in/lucas-mat%C3%ADas-ota%C3%B1o-363167172/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <img src="./assets/icons8-linkedin.svg" alt="LinkedIn logo" />
           </a>
-          <a href="http://" target="_blank" rel="noopener noreferrer">
+          <a href="https://github.com/LucasOta" target="_blank" rel="noopener noreferrer">
             <img src="./assets/icons8-github.svg" alt="Github logo" />
           </a>
-          <a href="http://" target="_blank" rel="noopener noreferrer">
+          <a href="https://medium.com/@lucasotano" target="_blank" rel="noopener noreferrer">
             <img src="./assets/icons8-medium.svg" alt="Medium logo" />
           </a>
         </div>
